0.02

0.01 2022-11-09T16:08:46+01:00
 - First version.