@@ -1,4 +1,5 @@
 0.02
+ - Update Module::Install to 1.21 version.
 
 0.01 2022-11-09T16:08:46+01:00
  - First version.
